--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 :root {
   --foreground-color: black;
-  --background-color: white;
+  --foreground-color-2: #121212;
+  --background-color: #fafafa;
+  --background-color-2: #ffffff; 
   --accent: #10fff3;
   --accent-dark: #00b7ff;
   --accent-secondary: #6203fa;
@@ -14,6 +16,7 @@ html {
 body {
   background-color: var(--background-color);
   color: var(--foreground-color);
+  transition: background-color 0.5s;
 }
 
 h1,
@@ -32,8 +35,68 @@ h2 {
   font-size: 2em;
 }
 
+code {
+  background-color: var(--background-color);
+}
+
+strong {
+  color: var(--foreground-color)
+}
+
 .ss-i {
   margin-right: 0.5rem;
+}
+
+
+/* 
+=============================
+ Navbar section 
+=============================
+*/
+
+.navbar {
+  background-color: var(--background-color-2);
+  color: var(--foreground-color);
+  transition: background-color 0.2s;
+}
+.navbar-menu {
+  background-color: var(--background-color-2);
+}
+
+.navbar-item {
+  color: var(--foreground-color-2);
+  background-color: var(--background-color-2);
+  transition: color 0.2s
+}
+
+.navbar-link.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, a.navbar-item.is-active, a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover {
+  color: var(--accent-dark);
+  background-color: var(--background-color);
+}
+
+.navbar-link {
+  background-color: var(--background-color-2);
+  color: var(--foreground-color-2);
+  transition: color 0.2s
+}
+
+.navbar-link:hover {
+  color: var(--accent-dark);
+}
+
+.navbar-dropdown {
+  background-color: var(--background-color-2);
+}
+
+.navbar-item.has-dropdown.is-active .navbar-link, .navbar-item.has-dropdown:focus .navbar-link, .navbar-item.has-dropdown:hover .navbar-link {
+  color: var(--accent-dark);
+  background-color: var(--background-color);
+}
+
+
+.navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover {
+  color: var(--accent-dark);
+  background-color: var(--background-color);
 }
 
 /* 
@@ -96,6 +159,12 @@ h2 {
 
 .ss-card {
   border-radius: 1em;
+  background-color: var(--background-color-2);
+  color: var(--foreground-color);
+}
+
+.ss-card-footer {
+  border-top: 1px solid var(--background-color);
 }
 
 
@@ -110,6 +179,9 @@ h2 {
   margin-bottom: 1em;
 }
 
+.card-footer-item:not(:last-child) {
+  border-right: 1px solid var(--background-color);
+}
 
 /* 
 =============================
@@ -161,6 +233,56 @@ h2 {
   background-size: 4px 50px;
 }
 
+
+
+/* 
+=============================
+ Footer section 
+=============================
+*/
+
+.footer {
+  background-color: var(--background-color-2);
+}
+
+
+/* 
+=============================
+ Contacts section 
+=============================
+*/
+.ss-contacts {
+  display: inline-block;
+  min-width: 2.5em;
+  text-align: center;
+  background-color: var(--accent-secondary);
+  border-radius: 1em;
+  padding: 0.5em;
+  margin-right: 0.1em;
+  color: var(--foreground-color) !important;
+  transition: background-color 0.2s;
+}
+
+.ss-contacts:hover {
+  background-color: var(--accent);
+  color: #000 !important;
+}
+
+.ss-contacts-padding-block {
+  padding: 0.5em 1em;
+  text-align: left;
+  display: inline-block;
+  margin-right: 0em;
+  margin-top: 0.5em;
+  border: solid 1px var(--accent);
+  border-radius: 0.1em;
+  background-color: #6203fa00;
+}
+
+.ss-contact-cards {
+  display: inline-block;
+}
+
 @media (max-width: 400px) {
   
   .ss-highlight {
@@ -186,6 +308,10 @@ h2 {
     font-size: 2em;
   }
 
+  .ss-contacts-padding-block {
+    max-width: 3em;
+  }
+
 }
 
 @media (max-width: 1023px) {
@@ -194,8 +320,11 @@ h2 {
     text-align: center;
   }
 
-}
+  .ss-contact-cards {
+    text-align: center;
+  }
 
+}
 
 
 @keyframes animationHighlight {
@@ -220,21 +349,4 @@ h2 {
   100% {
     opacity:1;
   }
-}
-
-/* Contacts */
-.ss-contacts {
-  display: inline-block;
-  min-width: 2.5em;
-  text-align: center;
-  background-color: var(--accent-secondary);
-  border-radius: 1em;
-  padding: 0.5em;
-  margin-right: 0.1em;
-  color: var(--foreground-color) !important;
-  transition: background-color 0.2s;
-}
-
-.ss-contacts:hover {
-  background-color: var(--accent-dark);
 }
