--- a/css/main.css
+++ b/css/main.css
@@ -341,7 +341,7 @@ strong {
 @media (max-width: 400px) {
   
   .ss-highlight {
-    font-size: 3em;
+    font-size: 4em;
   }
   .square-box {
     padding-top: calc(100% - 6em);
@@ -367,6 +367,13 @@ strong {
     max-width: 3em;
   }
 
+}
+
+@media (max-width: 315px) {
+  
+  .ss-highlight {
+    font-size: 3em;
+  }
 }
 
 @media (max-width: 1023px) {
